day4/configmap-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-pod
spec:
  containers:
  - image: busybox
    name: configmap-pod
    command: ['sh', '-c', 'while true; do sleep 3600; done']
