day4/configmap-volume-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-volume-pod
spec:
  containers:
  - image: busybox
    name: configmap-pod
    command: ['sh', '-c', 'while true; do sleep 3600; done']
    volumeMounts:
      - name: cm-config
        mountPath: /var/config
  volumes:
    - name: cm-config
      configMap:
        name: my-configmap
