day4/load-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: load-generator
  name: load-generator
spec:
  replicas: 3
  selector:
    matchLabels:
      run: load-generator
  template: 
    metadata:
      labels:
        run: load-generator
    spec:
      containers:
      - name: load-generator
        image: busybox:1.28
        args:
        - /bin/sh
        - -c
        - while sleep 0.01; do wget -q -O- http://php-apache; done
