day4/nodename-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodename-pod
spec:
  nodeName: worker02
  containers:
  - image: busybox
    name: configmap-pod
    command: ['sh', '-c', 'while true; do sleep 3600; done']
