day4/nodeselector-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodeselector-pod
spec:
  nodeSelector: 
    mylabel: myvalue
  containers:
  - image: busybox
    name: configmap-pod
    command: ['sh', '-c', 'while true; do sleep 3600; done']
