day4/schedule-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: schedule-pod
spec:
  containers:
  - name: nginx
    image: nginx:1.19.1
    ports:
    - containerPort: 80
