day4/security-pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: security-pod1
spec:
  securityContext:
    runAsNonRoot: true
  containers:
    - name: c1
      image: nginx
