day4/security-pod3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: security-pod3
spec:
  securityContext:
    runAsUser: 1000
  containers:
    - name: c1
      image: busybox:1.28
      command: ['sh', '-c', 'while true; do sleep 1d; done']
      securityContext:
        runAsUser: 2000
        allowPrivilegeEscalation: false
