day4/taint-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: taint-pod
spec:
  tolerations:
  - key: "env"
    operator: "Equal"
    value: "prod"
    effect: "NoSchedule"
  - key: "testing"
    operator: "Equal"
    value: "true"
    effect: "NoExecute"
    tolerationSeconds: 60
  containers:
  - name: nginx
    image: nginx:1.19.1
    ports:
    - containerPort: 80
