day4/with-node-affinity2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: with-node-affinity2
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: kubernetes.io/country
            operator: In
            values:
            - poland
            - france
  containers:
    - image: nginx
      name: nginx
