day4/with-pod-anti-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: with-pod-anti-affinity
spec:
  affinity:
    podAffinity:
#      requiredDuringSchedulingIgnoredDuringExecution:
#      - labelSelector:
#          matchExpressions:
#          - key: application 
#            operator: In
#            values:
#            - myapp1
#        topologyKey: kubernetes.io/country
    podAntiAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 100
        podAffinityTerm:
          labelSelector:
            matchExpressions:
            - key: application
              operator: In
              values:
              - myapp1
          topologyKey: kubernetes.io/country
  containers:
  - name: with-pod-affinity
    image: nginx
